[gd_scene load_steps=11 format=3 uid="uid://cflmy4e5hfxah"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/QuickConnect/WindowQuickConnect.gd" id="1_pefds"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextButton_Element.gd" id="2_h1bhl"]
[ext_resource type="Texture2D" uid="uid://b8qrpcpsbex3x" path="res://Feagi-Godot-Interface/UI/Resources/Icons/plus.png" id="2_lxcmn"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TitleBar/TitleBar.tscn" id="3_ad4rt"]
[ext_resource type="PackedScene" uid="uid://bxqu4fr885cv2" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Scroll/Morphology_List/MorphologyScroll.tscn" id="3_ftgka"]
[ext_resource type="PackedScene" uid="uid://c8gpa1figwpvw" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/SmartMorphologyView/SmartMorphologyView.tscn" id="4_xe1wk"]
[ext_resource type="PackedScene" uid="uid://geytg8x6c7no" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/GenericDetails/MorphologyGenericDetails.tscn" id="5_lixjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fl3t"]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hcpwn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdpvy"]
bg_color = Color(0.6, 0.866667, 0.6, 1)

[node name="WindowQuickConnect" type="Panel"]
custom_minimum_size = Vector2(10, 10)
script = ExtResource("1_pefds")
style_incomplete = SubResource("StyleBoxFlat_0fl3t")
style_waiting = SubResource("StyleBoxFlat_hcpwn")
style_complete = SubResource("StyleBoxFlat_rdpvy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 0
offset_top = 39.0
offset_right = 40.0
offset_bottom = 79.0

[node name="step1" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="step1" type="HBoxContainer" parent="VBoxContainer/step1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/step1/step1"]
layout_mode = 2
size_flags_horizontal = 3
text = "1. Please Select A Source Area..."

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/step1/step1"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_lxcmn")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="VBoxContainer/step1/step1"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="step2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="step2" type="HBoxContainer" parent="VBoxContainer/step2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/step2/step2"]
layout_mode = 2
size_flags_horizontal = 3
text = "2. Please Select A Destination Area..."

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/step2/step2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_lxcmn")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="VBoxContainer/step2/step2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="step3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="step3" type="VBoxContainer" parent="VBoxContainer/step3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/step3/step3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/step3/step3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "3. Please Select A Morphology..."

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/step3/step3/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_lxcmn")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="VBoxContainer/step3/step3/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="MorphologyInfo" type="HBoxContainer" parent="VBoxContainer/step3/step3"]
visible = false
layout_mode = 2

[node name="MorphologyScroll" parent="VBoxContainer/step3/step3/MorphologyInfo" instance=ExtResource("3_ftgka")]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2

[node name="SmartMorphologyView" parent="VBoxContainer/step3/step3/MorphologyInfo" instance=ExtResource("4_xe1wk")]
layout_mode = 2
morphology_editable = false

[node name="MorphologyGenericDetails" parent="VBoxContainer/step3/step3/MorphologyInfo" instance=ExtResource("5_lixjw")]
layout_mode = 2

[node name="Establish" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Establish the Connection"
script = ExtResource("2_h1bhl")

[node name="TitleBar" parent="." instance=ExtResource("3_ad4rt")]
layout_mode = 0
title = "Quick Connect"
automatic_setup_window_closing_for_window_manager_name = &"quick_connect"

[connection signal="pressed" from="VBoxContainer/step1/step1/TextureButton" to="." method="_setting_source"]
[connection signal="pressed" from="VBoxContainer/step2/step2/TextureButton" to="." method="_setting_destination"]
[connection signal="pressed" from="VBoxContainer/step3/step3/HBoxContainer/TextureButton" to="." method="_setting_morphology"]
[connection signal="morphology_selected" from="VBoxContainer/step3/step3/MorphologyInfo/MorphologyScroll" to="." method="_set_morphology"]
[connection signal="pressed" from="VBoxContainer/Establish" to="." method="establish_connection_button"]
